
[ext_resource type="Script" path="res://Start.gd" id="1_7edn1"]

[node name="Start" type="Node2D"]
script = ExtResource("1_7edn1")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(1540, 0)
offset_left = 30.0
offset_right = 1570.0
offset_bottom = 124.0
bbcode_enabled = true
text = "[font_size=90]TPS Cookbook[/font_size]"
fit_content = true

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 80.0
offset_top = 135.0
offset_right = 240.0
offset_bottom = 225.0
columns = 8

[node name="Chess" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
text = "Chess
V0.1"

[node name="Match3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
text = "Match 3
V0.8"

[node name="Screen2D" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
text = "2D Screen
V0.1"

[node name="Quit" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
text = "Quit"

[connection signal="button_up" from="GridContainer/Chess" to="." method="_on_chess_button_up"]
[connection signal="button_up" from="GridContainer/Match3" to="." method="_on_match_3_button_up"]
[connection signal="button_up" from="GridContainer/Screen2D" to="." method="_on_screen_2D_button_up"]
[connection signal="button_up" from="GridContainer/Quit" to="." method="_on_quit_button_up"]
